[project]
version = "0.1.0"
name = "inference"
authors = [
  { name="Data Fairy Azure", email="xxx@gmail.com" },
]
description = "Inference libraries."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
